fix: navbar single row - use flex nowrap + reduce padding on medium screens

--- a/client/public/rayyan-site/assets/css/style-ar.css
+++ b/client/public/rayyan-site/assets/css/style-ar.css
@@ -268,6 +268,18 @@ border: 2px solid #000;
   background: #253272;
   position: relative;
   padding-left: 25px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Reduce nav padding on medium screens to prevent wrapping */
+@media (min-width: 992px) and (max-width: 1399px) {
+  #mega-menu-holder>ul> li> a {
+    padding: 27px 12px 27px 12px !important;
+    font-size: 14px !important;
+  }
 }
 
 .language-icon {
@@ -285,7 +297,7 @@ border: 2px solid #000;
   padding: 5px 10px 5px 10px;
   display: block;
   margin-left: 15px;
-  margin-top: 20px;
+  margin-top: 0;
   font-family: "Tajawal", sans-serif;
   font-size: 17px;
   font-weight: 800;
